# dep-audit

./: README.md  pyproject.toml
src/dep_audit/: __init__.py  cli.py  core.py
